--- a/GIS/21611147GIS.md
+++ b/GIS/21611147GIS.md
@@ -1,5 +1,18 @@
 #位置情報を利用したサービス
 
-1.グルメアプリ
+#1.[Retty](http://retty.me)
 
-2.おでかけスクラップtab
+ターゲット　若者、食に敏感な人。
+
+コンセプト　グルメサイトとしての利用、楽にお店を探せるアプリ
+
+行きたいお店のマップを作ることが可能
+
+#2.MUJI pass port
+アプリのためURLがありません。
+
+ターゲット　雑貨が好きな人、無印良品をよく使う人
+
+コンセプト　商品をチェックする。
+チェックインでポイントが貯まる
+サービスを位置情報を利用している。
