--- a/GIS/21611147GIS.md
+++ b/GIS/21611147GIS.md
@@ -8,11 +8,10 @@
 
 行きたいお店のマップを作ることが可能
 
-#2.MUJI pass port
-アプリのためURLがありません。
+#2.[MUJI pass port](http://www.muji.com/jp/passport)
 
 ターゲット　雑貨が好きな人、無印良品をよく使う人
 
 コンセプト　商品をチェックする。
 チェックインでポイントが貯まる
-サービスを位置情報を利用している。
+サービスに位置情報を利用している。
