--- a/GIS/21611067GIS.md
+++ b/GIS/21611067GIS.md
@@ -1,4 +1,9 @@
 #Googleマップ
 ターゲット；　道に迷った人・行き先を案内してほしい人
-#SNSの位置情報
-ターゲット；　若者など全世界のユーザー
+             自分が今いる現在地の確認をする人
+             https://maps.google.co.jp/
+#SNSの位置情報（Twitter・instagram)
+ターゲット：　若者や全世界のユーザー
+　　　　　　　最近話題のニュースや場所が分かる。
+       https://twitter.com/?lang=ja
+       https://www.instagram.com/accounts/login/?hl=ja
