--- a/GIS/21611147GIS.md
+++ b/GIS/21611147GIS.md
@@ -1,17 +1,31 @@
 #位置情報を利用したサービス
 
 #1.[Retty](http://retty.me)
+ターゲット:　若者、食に敏感な人。
 
-ターゲット　若者、食に敏感な人。
-
-コンセプト　グルメサイトとしての利用、楽にお店を探せるアプリ
-
-行きたいお店のマップを作ることが可能
+コンセプト:　グルメサイトとしての利用、楽にお店を探せるアプリ。気になるお店をマップとしてまとめることが可能
 
 #2.[MUJI pass port](http://www.muji.com/jp/passport)
 
-ターゲット　雑貨が好きな人、無印良品をよく使う人
+ターゲット:　雑貨が好きな人、無印良品をよく使う人
 
-コンセプト　商品をチェックする。
-チェックインでポイントが貯まる
-サービスに位置情報を利用している。
+コンセプト:　無印の生活用品や家具を店舗でなくても見ることが出来る。
+
+チェックインでポイントが貯まるサービスに位置情報を利用している。
+
+#3.[google map](https://www.google.co.jp/maps/@35.673343,139.710388,11z)
+ターゲット：スマホ所持者。方向音痴の人たち
+
+コンセプト：いかに早く着くように案内するか。道に迷った人が自分の場所、方向を理解できるかどうか。
+
+#4.[GPS](https://www.nttdocomo.co.jp/service/auto_gps/21611067)
+
+ターゲット：共働きの親、塾などで帰りが遅くなる子供のいる家庭
+
+コンセプト：場所がわかることで連絡に気づかなくても安心できる。
+
+#5.SNS（[Twitter](https://twitter.com/?lang=ja)・[instagram](https://www.instagram.com/accounts/login/?hl=ja))
+
+ターゲット：　若者や全世界のユーザー　　　
+
+コンセプト：最近話題のニュースや場所が分かる。   
