--- a/IDEA/21611147.md
+++ b/IDEA/21611147.md
@@ -1,5 +1,7 @@
-＊位置情報を利用したサービスやビジネスプラン
+#位置情報を利用したサービスやビジネスプラン
 
 ・お出かけスポットをまとめた地図を現在地などの位置情報を利用したサービスで紹介する。
+
 ・位置情報を利用したゲームアプリ(この場所に行けばアイテムがもらえるなど）
+                 
 ・ヘアサロンやネイルサロンを現在地などから調べることが出来るサイト、サービス。
